--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>CoffeeScript 中文翻译项目</title>
   <meta charset='utf-8' />
   <link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="keywords" content="coffeescript, coffee-script, javascript, programming">
+  <meta name="description" content="CoffeeScript 翻译项目列表">
 </head>
 <body>
 <div id="app">
